<resources>
    <string name="app_name">Maurice Sensores</string>
    <string name="ingrese_usuario">Usuario</string>
    <string name="ingrese_password">Contraseña</string>
    <string name="login_Button">Log In</string>
    <string name="titulo_app">Sensores</string>
    <string name="nivel_Bateria">Nivel de Bateria</string>
    <string name="singup_Button">Sign Up</string>
    <string name="ingrese_env">Env</string>
    <string name="ingrese_nombre">Nombre</string>
    <string name="ingrese_apellido">Apellido</string>
    <string name="ingrese_dni">DNI</string>
    <string name="ingrese_email">Email</string>
    <string name="ingrese_comision">Comision</string>
    <string name="campo_vacio">Complete Todos Los Campos</string>
    <string name="contrasenia_corta">La contraseña debe tener mas de 8 caracteres</string>
    <string name="ambiente_erroneo">El ambiente puede ser TEST o PROD.</string>
    <string name="error">Error. Verifique su conexion a Internet.</string>
    <string name="api_url">http://so-unlam.net.ar/api/</string>
    <string name="sensor_acelerometro">Acelerometro</string>
    <string name="eje_x">Eje X:</string>
    <string name="eje_y">Eje Y:</string>
    <string name="eje_z">Eje Z:</string>
    <string name="sensor_luz">Sensor de Luz</string>
    <string name="luminosidad">Luminosidad:</string>
    <string name="no_internet">Sin Conexion a Internet.</string>
    <string name="con_internet">Conectado a Internet.</string>
    <string name="registrar_datos">Registrar Datos</string>
    <string name="token_updated">Token Actualizado. Intente nuevamente.</string>
    <string name="listar_eventos">Ver Registros</string>
    <string name="type_events">Tipo Evento</string>
    <string name="description">Descripcion</string>
    <string name="no_list">No se registraron eventos.</string>
    <string name="eliminar_registros">Eliminar Registros</string>
    <string name="eliminar_acelerometro">Borrar reg. acelerometro</string>
    <string name="eliminar_luminosidad">Borrar reg. luminosidad</string>
    <string name="eliminacion_exitosa">Eliminacion Exitosa</string>
    <string name="eliminando">Eliminando...</string>
    <string name="error_conexion_local">Error de conexion. Datos almacenados localmente.</string>
</resources>
